--- a/index.html
+++ b/index.html
@@ -538,6 +538,39 @@ html,body{
                       <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       Leandro (aka. <a href="https://mc.us4.list-manage.com/pages/track/click?u=642fe0808f5437abac8066103&id=5737238d3c" target="_blank" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #00ADD8;font-weight: normal;text-decoration: underline;box-sizing: border-box !important;">@leostera</a>)
                     </div>
+
+
+                    <!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://ostera.us4.list-manage.com/subscribe/post?u=642fe0808f5437abac8066103&amp;id=a27085f64b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<input type="email" value="" placeholder="Email Address (required)" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<input type="text" value="" placeholder="First name" name="FNAME" class="" id="mce-FNAME">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_642fe0808f5437abac8066103_a27085f64b" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+
+
                   </div>
 
                 </div>
