Rewords and fix style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <title style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">Reasonable Coding | New Season, New Format</title>
 
+<link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; margin: 0 auto; max-width: 50%}
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+
     <style type="text/css" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 html,body{
   height:100%;
@@ -507,13 +514,13 @@ html,body{
                     <div class="mcnTextContent" style="padding-top: 0;padding-right: 9px;padding-bottom: 9px;padding-left: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
                       <p style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;margin: 10px 0;padding: 0;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;box-sizing: border-box !important;">Hello, #{user.first_name}!<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
-                      If you enjoyed Seasons 0 through 2 on YouTube, you probably&nbsp;liked the exploratory approach to building software with new technology. I know I do, too! 🎉 — unfortunately, not everyone has time (or patience!) to see&nbsp;me rant for over 2 hours just to dig out the&nbsp;Good Stuff™️&nbsp; and maybe learn something new 😅.<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+                      If you enjoyed <a href="https://youtube.com/c/ReasonableCoding" target="_blank" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #00ADD8;font-weight: normal;text-decoration: underline;box-sizing: border-box !important;">Seasons 0 through 2 on YouTube</a>, you probably&nbsp;liked the exploratory approach to building software with new technology. I know I do, too! 🎉 — unfortunately, not everyone has time (or patience!) to see&nbsp;me rant for over 2 hours just to dig out the&nbsp;Good Stuff™️&nbsp; and maybe learn something new 😅.<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       This time, <strong style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">Reasonable Coding</strong> is going to take a spin 🚀<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       I'll be <em style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">compressing the learnings</em> of a live-stream in a bite-sized video you can watch between test-runs, right after stand-up, or in a bathroom break. Like a How I Met Your Mother episode (but without Jason Segel 🙈).<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
-                      This season will also be around a single&nbsp;project: in ~12&nbsp;episodes&nbsp;we will be creating a non Turing-complete language for declarative data modeling, and its corresponding compiler with a&nbsp;code generation target.<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+                      This season will also be around a single&nbsp;project: in ~12&nbsp;episodes&nbsp;we will be creating a non Turing-complete, statically typed language for declarative data modeling, and its corresponding compiler with a&nbsp;code generation target.<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
                       Through this project we will explore:</p>
 
@@ -541,12 +548,6 @@ html,body{
 
 
                     <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
 <div id="mc_embed_signup">
 <form action="https://ostera.us4.list-manage.com/subscribe/post?u=642fe0808f5437abac8066103&amp;id=a27085f64b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
