Drop in Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;min-height: 100vh;box-sizing: border-box !important;">
-  <head style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;"><script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/642fe0808f5437abac8066103/e13f557a6fac2faec551929cf.js");</script>
+  <head style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <meta charset="UTF-8" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <title style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">Reasonable Coding | New Season, New Format</title>
@@ -580,5 +580,14 @@ html,body{
           </div>
         </div>
       </div>
-      <div data-dojo-type="mojo/widgets/pages/PrivacyBadge" data-dojo-props="uniqueId: &quot;642fe0808f5437abac8066103&quot;, isLive: true, settings: {&quot;enabled&quot;:true,&quot;pageId&quot;:3357,&quot;theme&quot;:&quot;light&quot;}"></div><div data-dojo-type="mojo/widgets/pages/PaymentGalleryImages"></div><div data-dojo-type="mojo/widgets/pages/OptOutLinkHandler" data-dojo-props="enableUrl: &quot;//mc.us4.list-manage.com/pages/track/do-not-track?u=642fe0808f5437abac8066103&id=0300cecfe1f0&quot;, checkStatusUrl: &quot;//mc.us4.list-manage.com/pages/track/do-not-track-enabled?u=642fe0808f5437abac8066103&id=0300cecfe1f0&quot;, isPreview: false"></div><script type="text/javascript" src="https://eep.io/mc-release/1.1.1f0a24fec4b5d8ac0463299512671395be1299240/js/mojo/mclandingpage.js" data-dojo-config="baseUrl: &quot;https://eep.io/mc-release/1.1.1f0a24fec4b5d8ac0463299512671395be1299240/js/dojo/&quot;, parseOnLoad: true, usePlainJson: true, isDebug: false"></script><script type="text/javascript" src="//mc.us4.list-manage.com/pages/track/open?u=642fe0808f5437abac8066103&id=0300cecfe1f0" async></script></body>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-65775908-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-65775908-5');
+</script>
+</body>
 </html>
